--- a/alt-logo-core-hoodie-black.html
+++ b/alt-logo-core-hoodie-black.html
@@ -144,7 +144,7 @@
        <h2>Alt logo Core Hoodie - black</h2>
    </div></br>
   <div class="product-description">
-      <p1>- The alternative core collection hoodie in black / unixex fit</br></br>
+      <p1>- The alternative core collection hoodie in black / unisex fit</br></br>
 
         - Black hoodie with the "Alt." logo embroidered in white on the</br>left breast</br></br>
         
@@ -409,178 +409,6 @@
   </div>
 
 
-<script>
-  // Get the payment session from Snipcart
-  const fetchPaymentSession = async () => {
-    const publicToken = new URLSearchParams(window.location.search).get('ZjNjOGMzMDctODE0Mi00MDM2LWI5ZGQtZTkyY2M4NTBjYWJjNjM3NjYxMjE5ODk1MTczNTUw')
-    try {
-      const response = await axios
-        .get(`https://payment.snipcart.com/api/public/custom-payment-gateway/payment-session?publicToken=${publicToken}`)
-      paymentSession = response.data
-      currency = paymentSession.invoice.currency
-    } catch (e) {
-      console.error(e)
-    }
-  }
-    // Creates the Google Pay Request Data
-  // This is needed for the Payment Request Api
-  const createGooglePayRequestData = () => ({
-    environment: 'TEST',
-    apiVersion: 2,
-    apiVersionMinor: 0,
-    merchantInfo: {
-      // A merchant ID is available after approval by Google.
-      // 'merchantId':'12345678901234567890',
-      merchantName: 'Example Merchant'
-    },
-    allowedPaymentMethods: [{
-      type: 'CARD',
-      parameters: {
-        allowedAuthMethods: ["PAN_ONLY", "CRYPTOGRAM_3DS"],
-        allowedCardNetworks: ["AMEX", "DISCOVER", "INTERAC", "JCB", "MASTERCARD", "VISA"]
-      },
-      tokenizationSpecification: {
-        type: 'PAYMENT_GATEWAY',
-        // Check with your payment gateway on the parameters to pass.
-        // @see {@link https://developers.google.com/pay/api/web/reference/request-objects#gateway}
-        parameters: {
-          'gateway': 'example',
-          'gatewayMerchantId': 'exampleGatewayMerchantId'
-        }
-      }
-    }]
-  })
-    // Create the payment details
-    const createPaymentDetails = () => ({
-    total: {
-      label: 'TOTAL',
-      amount: {
-        currency: currency,
-        value: paymentSession.invoice.amount
-      }
-    },
-    displayItems: paymentSession.invoice.items.map(i => {
-      const isItem = i.type !== 'Discount' && i.type !== 'Tax' && i.type !== 'Shipping' // Filter items from discount, tax, and shipping
-      const label = isItem ? `${i.name} x ${i.quantity}` : i.name // Add the quantity if needed
-      return {
-        label,
-        amount: {
-          value: i.amount,
-          currency
-        }
-      }
-    })
-  })
-    // Create the payment request (Using the Payment Request API)
-    const createPaymentRequest = () => {
-    const supportedMethods = [
-      { supportedMethods: 'https://google.com/pay', data: createGooglePayRequestData() },
-    ]
-
-    paymentDetails = createPaymentDetails()
-
-    const options = {
-      requestPayerEmail: true,
-      requestPayerName: true
-    }
-    paymentRequest = new PaymentRequest(
-      supportedMethods,
-      paymentDetails,
-      options
-    )
-  }
-    // Add the buy button Event Listener
-    const bindBuyButton = () => {
-    paymentRequest.canMakePayment() // Validate the payment request
-      .then(function (result) {
-        if (result) {
-          document.getElementById('pay').addEventListener('click', onBuyClicked);
-        }
-      })
-      .catch(function (err) {
-        console.log(err)
-      })
-  }
-  // Add the event listener on the Buy button
-  const onBuyClicked = async () => {
-    try {
-      const paymentRes = await paymentRequest.show()
-      await handlePayment(paymentRes)
-    } catch (e) {
-      console.log(e)
-    }
-  }
-  // Payment completed callback
-  const handlePayment = async (paymentRes) => {
-    try {
-      const res = await axios.post(`/api/confirm-payment?sessionId=${paymentSession.id}`, paymentRes)
-      paymentRes.complete('success')
-      window.location.href = res.data.returnUrl
-    } catch (e) {
-      console.error(e)
-    }
-  }
-  async (req, res) => {
-  if (req.body && req.body.publicToken) {
-    try {
-      // Validate the request was made by Snipcart
-      await axios.get(`https://payment.snipcart.com/api/public/custom-payment-gateway/validate?publicToken=${req.body.publicToken}`)
-      // Return the payment methods
-      return res.json([{
-        id: 'paymentrequest-custom-gateway',
-        name: 'Google pay',
-        checkoutUrl: 'https://paymentrequest-custom-gateway.snipcart.vercel.app',
-        iconUrl: `https://paymentrequest-custom-gateway.snipcart.vercel.app/google_pay.png`
-      }])
-    }catch(e){
-      // Couldn't validate the request
-      console.error(e)
-      return res.status(401).send()
-    }
-  }
-  // No publicToken provided. This means the request was NOT made by Snipcart
-  return res.status(401).send()
-}
-async (req, res) => {
-
-// TODO: Validate the request was approved by your payment gateway (in this case Google Pay)
-
-// Parse the gateway payment info to match Snipcart's schema
-// This will change depending on the payment gateway you choose
-const paymentSessionId = req.query.sessionId
-const data = {
-  paymentSessionId,
-  state: 'processed',
-  transactionId: req.body.requestId,
-  instructions: 'Your payment will appear on your statement in the coming days',
-  links: {
-    refunds: `https://paymentrequest-custom-gateway.snipcart.vercel.app/api/refund?transactionId=${req.body.requestId}`
-  },
-}
-
-// Add authentification
-// This is the secret API key created in Snipcart's merchant dashboar
-const options = {
-  headers: {
-    Authorization: 'Bearer <YOUR_SECRET_API_KEY>'
-  }
-}
-
-try{
-  // Confirm payment with Snipcart
-  const resp = await axios.post(`${process.env.PAYMENT_URL}/api/private/custom-payment-gateway/payment`,data, options)
-
-  // ReturnUrl will redirect the user to the Order confirmation page of Snipcart
-  return res.json({
-    returnUrl: resp.data.returnUrl
-  })
-}catch(e){
-  console.error(e)
-}
-
-return res.status(500).send()
-}
- </script>
 <script src="dropdown.js"></script>
 <script src="back-to-top.js"></script>
 <script src="product-slideshows.js"></script>
