--- a/the-change-logo-tee-black.html
+++ b/the-change-logo-tee-black.html
@@ -115,27 +115,27 @@
 
     <!-- Thumbnail image controls -->
     <div class="column3">
-      <img class="demo" src="images/WWW-be-the-change-t-shirt-1.png" width="150" height="100" onclick="currentSlide(1)">
+      <img class="demo" src="images/WWW-be-the-change-t-shirt-1.png" width="150" height="100" onclick="currentSlide(1)" alt="Model is 6' and is wearing the 'the change' logo tee in size XL">
     </div>
 
     <div class="column3">
-      <img class="demo" src="images/WWW-the-change-t-shirt-2.png" width="150" height="100" onclick="currentSlide(2)">
+      <img class="demo" src="images/WWW-the-change-t-shirt-2.png" width="150" height="100" onclick="currentSlide(2)" alt="Model is 6' and is wearing the 'the change' logo tee in size XL">
     </div>
 
     <div class="column3">
-      <img class="demo" src="images/t-shirt-model-2.png" width="150" height="100" onclick="currentSlide(3)">
+      <img class="demo" src="images/t-shirt-model-2.png" width="150" height="100" onclick="currentSlide(3)" alt="Model is 6' and is wearing the 'the change' logo tee in size XL">
     </div>
 
     <div class="column3">
-      <img class="demo" src="images/t-shirt-model-3.png" width="150" height="100" onclick="currentSlide(4)">
+      <img class="demo" src="images/t-shirt-model-3.png" width="150" height="100" onclick="currentSlide(4)" alt="Model is 6' and is wearing the 'the change' logo tee in size XL">
     </div>
 
     <div class="column3">
-      <img class="demo" src="images/t-shirt-model-5.png" width="150" height="100" onclick="currentSlide(5)">
+      <img class="demo" src="images/t-shirt-model-5.png" width="150" height="100" onclick="currentSlide(5)" alt="Model is 6' and is wearing the 'the change' logo tee in size XL">
     </div>
 
     <div class="column3">
-      <img class="demo" src="images/t-shirt-model-4.png" width="150" height="100" onclick="currentSlide(6)">
+      <img class="demo" src="images/t-shirt-model-4.png" width="150" height="100" onclick="currentSlide(6)" alt="Model is 6' and is wearing the 'the change' logo tee in size XL">
     </div>
   </div>
 </div>
