--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="announcement">
-    <p class="announcement__text">free shipping for all orders to the UK! international shipping available | fees may apply</p>
+    <p class="announcement__text">free shipping for all orders to the UK! international shipping available | fees may apply yuuuuurp</p>
   </div>
 
   <div class="container">
